js/js.translator/testData/incremental/invalidation/implicitExport/lib1/l1.1.kt
@JsExport
fun consumeCollection(list: List<String>): String? {
    return list.getOrNull(0)
}
